<resources>
    <string name="app_name">XTimeMachine</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="time_machine">Time machine</string>
    <string name="fake_date">Fake date</string>
    <string name="fake_date_info">The date will be fixed to the value entered above. The time is always the same as your local time.</string>
    <string name="view_project_on_github">View project on GitHub</string>
    <string name="view_project_on_github_summary">Licensed under GPLv3</string>
    <string name="lspatch_info">Designed for LSPatch. Use the \'Module scope\' feature in LSPatch to limit the application scope of this module.</string>
    <string name="view_lspatch_project_page">View LSPatch project page</string>
    <string name="view_lspatch_project_page_summary">Apply this module on non-root devices using LSPatch</string>
</resources>